--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-           <img src="./images/STUDIO KANYA.png" alt="website">
+           <img src="./STUDIO KANYA.png" alt="website">
             <div class="card-body">
               <p class="card-text">Website mockup</p>
             </div>
@@ -64,7 +64,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/insta feed.png" alt="instagram-feed">
+            <img src="./insta feed.png" alt="instagram-feed">
             <div class="card-body">
               <p class="card-text">Instagram feed mockup</p>
 
@@ -73,7 +73,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/app.png" alt="app mockup">
+            <img src="./app.png" alt="app mockup">
             <div class="card-body">
               <p class="card-text">App mockup</p>
              
