--- a/project.html
+++ b/project.html
@@ -67,7 +67,7 @@ I used Canva, one of the very popular graphic designing tools to create mockup d
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-           <img src="./images/STUDIO KANYA (1).png" alt="palatte">
+           <img src="./STUDIO KANYA (1).png" alt="palatte">
             <div class="card-body">
               <p class="card-text">Color Palatte</p>
             </div>
@@ -75,7 +75,7 @@ I used Canva, one of the very popular graphic designing tools to create mockup d
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/STUDIO KANYA (2).png" alt="fonts">
+            <img src="./STUDIO KANYA (2).png" alt="fonts">
             <div class="card-body">
               <p class="card-text">Fonts</p>
 
@@ -84,7 +84,7 @@ I used Canva, one of the very popular graphic designing tools to create mockup d
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/STUDIO KANYA3.png" alt="tools">
+            <img src="./STUDIO KANYA3.png" alt="tools">
             <div class="card-body">
               <p class="card-text">Tools</p>
              
