--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
   <title>Work</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="icon" href="./favicon/favicon.ico">
+    <link rel="icon" href="./favicon.ico">
  <link href="./portfolio.css" rel="stylesheet">
  
  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Orelega+One&display=swap" rel="stylesheet">
