--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
 <section class="resume-text">
       <h1 class="heading">Professional Summary</h1>
       <p class="fs-5 col-md-8">A skilled and creative Front End Developer eager to kickstart my career in web designing and developing visually appealing, responsive, and user-friendly web applications. Committed to creating exceptional user experiences through clean and efficient code, and constantly staying 
-        up-to-date with the latest web technologies and design trends.<img class="flower" src="botanica.png" alt="flower"></p>
+        up-to-date with the latest web technologies and design trends.</p>
   
       <div class="row g-5">
         <div class="col-md-6">
